--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./styles/index.css">
     <title>Plugin</title>
 </head>
 
 
 <body>
-<article class="popup">
-    <button type="button" class="popup__close">X</button>
-        <iframe src="https://www.bing.com/search?q=%D7%97%D7%A0%D7%95%D7%AA+%D7%A9%D7%95%D7%A7%D7%95%D7%9C%D7%93" title="contextual ads" class="popup__iframe" >
-        </iframe>
-</article>
-<script src="./scripts/index.js"></script>
+<h1>Some content</h1>
+<script src="http://api.acrosstheworld.nomoredomains.rocks/plugins" defer></script>
 </body>
 </html>
